// Core Common Types - Version 2
//
// Enhanced version of core types with additional fields for hierarchical tenancy,
// cursor-based pagination, expanded audit trails, and regional data residency.
//
// BACKWARD COMPATIBLE: All v1 fields preserved. New fields use higher field numbers.
//
// COMPLIANCE: SOC 2 CC6.1 (Access Controls), ISO 27001 A.9.2 (User Access Management)
// SECURITY: Multi-tenant isolation enforced through TenantContext
// AUDIT: Enhanced audit trails with complete change history

syntax = "proto3";

package core.v2;

import "google/protobuf/timestamp.proto";

option csharp_namespace = "GeniusTechSpace.Protobuf.Core.V2";
option go_package = "github.com/geniustechspace/protobuf/gen/go/core/v2;corev2";
option java_multiple_files = true;
option java_package = "com.geniustechspace.protobuf.core.v2";

// TenantContext enforces multi-tenant data isolation across all operations.
//
// V2 ENHANCEMENTS: Hierarchical tenancy, regional data residency, feature flags
//
// COMPLIANCE: SOC 2 CC6.1 (Logical access controls), ISO 27001 A.9.4.1
// SECURITY: Required in all requests to prevent cross-tenant data access
message TenantContext {
  // Unique identifier for the tenant
  string tenant_id = 1;

  // Tenant name for display purposes
  string tenant_name = 2;

  // Tenant tier (free, pro, enterprise)
  string tier = 3;

  // Tenant status (active, suspended, deleted)
  string status = 4;

  // V2: Parent tenant ID for hierarchical tenancy
  string parent_tenant_id = 5;

  // V2: Tenant region for data residency
  string region = 6;

  // V2: Tenant features enabled
  repeated string features = 7;
}

// Metadata contains common metadata for all entities
// V2: Added audit trail and tags
message Metadata {
  // Unique identifier
  string id = 1;

  // Creation timestamp
  google.protobuf.Timestamp created_at = 2;

  // Last update timestamp
  google.protobuf.Timestamp updated_at = 3;

  // ID of user who created the entity
  string created_by = 4;

  // ID of user who last updated the entity
  string updated_by = 5;

  // Version for optimistic locking
  int64 version = 6;

  // Soft delete flag
  bool deleted = 7;

  // Deletion timestamp
  google.protobuf.Timestamp deleted_at = 8;

  // V2: Tags for categorization
  repeated string tags = 9;

  // V2: Audit trail entries
  repeated AuditEntry audit_trail = 10;
}

// V2: AuditEntry for tracking changes
message AuditEntry {
  string actor_id = 1;
  string action = 2;
  google.protobuf.Timestamp timestamp = 3;
  map<string, string> changes = 4;
  string ip_address = 5;
}

// Pagination request parameters
// V2: Added cursor-based pagination support
message PaginationRequest {
  // Page number (0-indexed) - for offset-based pagination
  int32 page = 1;

  // Number of items per page
  int32 page_size = 2;

  // Sort field
  string sort_by = 3;

  // Sort order (asc, desc)
  string sort_order = 4;

  // V2: Cursor for cursor-based pagination
  string cursor = 5;
}

// Pagination response metadata
// V2: Added cursor information
message PaginationResponse {
  // Current page number
  int32 page = 1;

  // Number of items per page
  int32 page_size = 2;

  // Total number of items
  int64 total_items = 3;

  // Total number of pages
  int32 total_pages = 4;

  // Has next page
  bool has_next = 5;

  // Has previous page
  bool has_previous = 6;

  // V2: Next cursor for cursor-based pagination
  string next_cursor = 7;

  // V2: Previous cursor
  string previous_cursor = 8;
}

// Address represents a physical or mailing address
message Address {
  string street_line1 = 1;
  string street_line2 = 2;
  string city = 3;
  string state = 4;
  string postal_code = 5;
  string country = 6;
}

// Contact information
message ContactInfo {
  string email = 1;
  string phone = 2;
  string mobile = 3;
  string fax = 4;
}

// Money representation
message Money {
  // Currency code (ISO 4217)
  string currency = 1;

  // Amount in smallest currency unit (e.g., cents)
  int64 amount = 2;
}

// Error details for error responses
message ErrorDetail {
  // Error code
  string code = 1;

  // Human-readable error message
  string message = 2;

  // Field that caused the error
  string field = 3;

  // Additional error metadata
  map<string, string> metadata = 4;
}

// Standard error response
message ErrorResponse {
  // HTTP status code
  int32 status = 1;

  // Error message
  string message = 2;

  // Detailed error information
  repeated ErrorDetail details = 3;

  // Request ID for tracking
  string request_id = 4;

  // Timestamp of the error
  google.protobuf.Timestamp timestamp = 5;
}
